--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,13 @@ pandas = ">=2.0.0"
 numpy = ">=1.24.0"
 requests = ">=2.31.0"
 fpdf = ">=1.7.2"
+chromadb = ">=0.4.18"
+sentence-transformers = ">=2.2.2"
+faiss-cpu = ">=1.7.4"
 graphviz = ">=0.20.0"
 matplotlib = ">=3.7.0"
+python-docx = ">=0.8.11"
+markdown = ">=3.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.4.0"
